[PRMT-1278] Refactored large-ehr-transfer-started to large-ehr-started
